[package]
name = "pdatastructs"
version = "0.6.0"
authors = ["Marco Neumann <marco@crepererum.net>"]
license = "MIT/Apache-2.0"
keywords = [
    "filter",
    "probabilistic",
    "sampling",
    "sketch",
]
categories = ["data-structures"]
description = "Simple probabilistic data structures"
repository = "https://github.com/crepererum/pdatastructs.rs"
documentation = "https://docs.rs/pdatastructs/"
readme = "README.md"
edition = "2021"

[dependencies]
fixedbitset = "0.4"
num-traits = "^0.2.4"
rand = "0.8"
succinct = "^0.5"

[dependencies.bytecount]
version = "0.6"
features = ["runtime-dispatch-simd"]

[dev-dependencies]
criterion = "0.3"
rand_chacha = "0.3"
rand_distr = "0.4"

[[bench]]
name = "filters"
harness = false

[[bench]]
name = "hyperloglog"
harness = false
