[package]
name = "pdatastructs"
version = "0.7.0"
authors = ["Marco Neumann <marco@crepererum.net>"]
license = "MIT/Apache-2.0"
keywords = [
    "filter",
    "probabilistic",
    "sampling",
    "sketch",
]
categories = ["data-structures"]
description = "Simple probabilistic data structures"
repository = "https://github.com/crepererum/pdatastructs.rs"
documentation = "https://docs.rs/pdatastructs/"
readme = "README.md"
edition = "2021"

[dependencies]
bytecount = { version = "0.6", features = ["runtime-dispatch-simd"], optional = true }
fixedbitset = { version = "0.5", optional = true }
num-traits = { version = "^0.2.4", optional = true }
rand = { version = "0.8", optional = true }
succinct = { version = "^0.5", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5"
rand_chacha = "0.3"
rand_distr = "0.5"
serde_json = "1.0"

[features]
default = [
    "bytecount",
    "fixedbitset",
    "num-traits",
    "rand",
    "succinct",
    "serde",
]

[[bench]]
name = "filters"
harness = false

[[bench]]
name = "hyperloglog"
harness = false
